Updated Black Flag rules and monsters with BF errata doc

--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/02 Character Classes.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/02 Character Classes.html
@@ -139,7 +139,7 @@
 <td style="text-align: right;">+5</td>
 <td style="text-align: right;">5</td>
 <td style="text-align: right;">+3</td>
-<td>Persistent Rage</td>
+<td>Relentless Rage</td>
 </tr>
 <tr>
 <td style="text-align: right;">15th</td>
@@ -219,7 +219,7 @@
 </ul>
 <h4>Fast Movement</h4>
 <p><em>5th-Level Barbarian Feature</em></p>
-<p>Your speed increases by 10 feet while you aren’t wearing heavy armor. In addition, when you roll initiative, you can immediately move up to half your speed.</p>
+<p>Your walking speed increases by 10 feet while you aren't wearing heavy armor. In addition, when you roll initiative, you can immediately move up to half your speed.</p>
 <h4>Multiattack</h4>
 <p><em>5th-Level Barbarian Feature</em></p>
 <p>Your physical prowess has grown. On your turn, you can make two attacks when you take the Attack action.</p>
@@ -285,7 +285,7 @@
 </table>
 <h4>Frenzy</h4>
 <p><em>3rd-Level Berserker Feature</em></p>
-<p>You can choose to go into a frenzy as part of the same bonus action you use to activate your Rage feature. Once you do so, for its duration, you can make a single melee weapon attack as a bonus action on each of your turns.</p>
+<p>You go into a frenzy when you rage. While raging, you can make a single melee weapon attack as a bonus action on each of your turns.</p>
 <h4>Ruthless Bearing</h4>
 <p><em>3rd-Level Berserker Feature</em></p>
 <p>Your ferocity looms at all times. You gain proficiency in the Intimidation skill. If you are already proficient, double your PB instead for Intimidation checks.</p>
@@ -294,8 +294,8 @@
 <p>While raging, you gain the following benefits:</p>
 <ul>
 <li>You ignore any levels of exhaustion you currently suffer for the duration of your rage.</li>
-<li>You can’t be charmed or frightened while raging. If you are already charmed or frightened when you enter a rage, the effect is suspended for the duration of the rage.</li>
-<li>During a Frenzy, if you score a critical hit or reduce a creature to 0 HP, you gain a number of temporary hit points equal to your PB + your CON modifier. These hit points last until expended or until you finish a short or long rest.</li>
+<li>You can't be charmed or frightened. If you are already charmed or frightened when you enter a rage, the effect is suspended for the duration of the rage.</li>
+<li>If you score a critical hit or reduce a creature to 0 HP, you gain a number of temporary hit points equal to your PB + your CON modifier. These hit points last until expended or until you finish a short or long rest.</li>
 </ul>
 <h4>Intimidating Presence</h4>
 <p><em>11th-Level Berserker Feature</em></p>
@@ -717,7 +717,7 @@
 <p>You can inspire others through stirring words, music, or other kinds of performance. As a bonus action on your turn, you can choose a creature within 60 feet of you, other than yourself, who can hear or see you. That creature gains one Bardic Inspiration die, a d6.</p>
 <p>Once within the next 10 minutes, the creature can roll that die and add the number rolled to one ability check, attack roll, or save that it makes. Once the Bardic Inspiration die is rolled, it is lost. A creature can have only one Bardic Inspiration die at a time.</p>
 <p>You can use this feature a number of times equal to your CHA modifier. You regain any expended uses when you finish a long rest.</p>
-<p>Your Bardic Inspiration die changes when you reach certain levels in this class. The die becomes a d8 at 5th level, d10 at 10th, and d12 at 14th.</p>
+<p>Your Bardic Inspiration die changes when you reach certain levels in this class. The die becomes a d8 at 5th level, d10 at 9th level, and d12 at 14th level.</p>
 <h4>Expertise</h4>
 <p><em>2nd and 6th-Level Bard Feature</em></p>
 <p>Choose two of your skill proficiencies, or one skill proficiency and one tool proficiency. Double your PB for any ability check you make that uses either of the chosen proficiencies.</p>
@@ -2529,7 +2529,7 @@ The Druid Progression table shows how many Primordial spell slots you have per d
 <p>You can spend 1 technique point to take the Disengage or Dash action as a bonus action on your turn. When you do so, your jump distance is doubled until the start of your next turn.</p>
 <h3>Unarmored Movement</h3>
 <p><em>2nd-Level Monk Feature</em></p>
-<p>Your speed increases by 10 feet while you aren't wearing armor or wielding a shield. This bonus increases when you reach certain monk levels, as shown in the Monk Progression table.</p>
+<p>Your walking speed increases by 10 feet while you aren't wearing armor or wielding a shield. This bonus increases when you reach certain monk levels, as shown in the Monk Progression table.</p>
 <h3>Monk Subclass</h3>
 <p><em>3rd, 7th, 11th, and 15th-Level Monk Feature</em></p>
 <p>Choose a subclass that reflects your method for connecting with the energies of the universe, either Flickering Dark or Open Hand (detailed at the end of this class). Your subclass grants you features at 3rd, 7th, 11th, and 15th level.</p>
@@ -2911,7 +2911,7 @@ The Druid Progression table shows how many Primordial spell slots you have per d
 <p>Your blessed touch can heal wounds. You have a pool of healing power that replenishes when you take a long rest. With that pool, you can restore a total number of hit points equal to 5 × your paladin level. As an action, you can touch a willing creature and draw from the pool to restore a number of hit points to that creature up to the maximum amount remaining in your pool. Alternatively, you can expend 5 hit points from your pool of healing to cure the target of one disease or neutralize one poison affecting it. You can cure multiple diseases and neutralize multiple poisons with a single use of this feature, expending hit points separately for each one. As a bonus action, you can use this feature to affect yourself instead of a different creature. This feature has no effect on Constructs or Undead.</p>
 <h3>Divine Smite</h3>
 <p><em>2nd-Level Paladin Feature</em></p>
-<p>Once per turn, when you hit a creature with a weapon attack, you can expend one Divine spell slot to deal extra radiant damage to the target, in addition to the weapon's normal damage. The extra damage is 2d8 for a 1st-circle spell slot, plus 1d8 for each circle higher than 1st, to a maximum of 5d8. The damage increases by 1d8 if the target is a Fiend or Undead.</p>
+<p>Once per turn, when you hit a creature with a weapon attack, you can expend one spell slot to deal extra radiant damage to the target, in addition to the weapon's normal damage. The extra damage is 2d8 for a 1st-circle spell slot, plus 1d8 for each circle higher than 1st, to a maximum of 5d8. The damage increases by 1d8 if the target is a Fiend or Undead.</p>
 <h3>Martial Action</h3>
 <p><em>2nd-Level Paladin Feature</em></p>
 <p>Your tactical expertise allows you to act quickly on the battlefield. You can take a bonus action on each of your turns in combat to perform a weapon option or one of the martial actions granted by this feature.</p>
@@ -4193,7 +4193,7 @@ This extra damage increases to two additional dice at 17th level.</p>
 <h5>Enlarged Spell</h5>
 <p>When you cast a spell with a range of self that affects an area (not a specific target), you can spend 3 sorcery points to increase the size of the spell's area of effect in one of the following ways (depending on the shape of the spell effect):</p>
 <ul>
-<li><strong>Circle, Cylinder, or Sphere.</strong> The radius of circle, sphere, or circular base of the cylinder increases by 5 feet. For example, the darkness spell could be altered to affect a 20 - foot - radius sphere (instead of a 15 - foot - radius sphere).</li>
+<li><strong>Circle, Cylinder, or Sphere.</strong> The radius of circle, sphere, or circular base of the cylinder increases by 5 feet. For example, the antimagic field spell could be altered to affect a 15-foot-radius sphere (instead of a 10-foot-radius sphere).</li>
 <li><strong>Cone.</strong> The cone's size increases by 15 feet. For example, the burning hands spell could be altered to affect a 30 - foot cone (instead of a 15 - foot cone).</li>
 <li><strong>Cube.</strong> The length of each cube face increases by 5 feet. For example, the thunderwave spell could be altered to affect a 20 - foot cube (instead of a 15 - foot cube).</li>
 <li><strong>Line.</strong> The length of the line increases by 15 feet. For example, the lightning bolt spell could be altered to affect a 115 - foot line (instead of a 100 - foot line).</li>
@@ -4478,7 +4478,7 @@ equipment granted by your background:</p>
 <td style="text-align: right;">3rd</td>
 <td style="text-align: right;">+2</td>
 <td style="text-align: right;">2</td>
-<td>Warlock Subclass</td>
+<td>Pact Magic (2/Rest), Warlock Subclass</td>
 <td style="text-align: right;">2</td>
 <td style="text-align: right;">3</td>
 <td style="text-align: right;">3</td>
