--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/04 Backgrounds and Talents.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/04 Backgrounds and Talents.html
@@ -15,7 +15,7 @@
 <h3>Criminal</h3>
 <p><strong>Skill Proficiencies:</strong> Choose two from Stealth, Investigation, Insight, or Deception.</p>
 <p><strong>Additional Proficiencies:</strong> You know Thieves' Cant. If you already know this language, you learn a different language of your choice. Gain proficiency with a tool and a vehicle.</p>
-<p><strong>Equipment:</strong> Five pieces of chalk, a grappling hook, a set of dark traveler's clothes or a costume, and a pouch containing 10 gp.</p>
+<p><strong>Equipment:</strong> Five pieces of chalk, a grappling hook, a set of dark common clothes or a costume, and a pouch containing 10 gp.</p>
 <h4>Talent</h4>
 <p>You have eked out a living on the fringes of lawful society. Choose a talent from this list to represent your experience: Covert, Scrutinous, or Touch of Luck.</p>
 <h3>Scholar</h3>
@@ -64,7 +64,7 @@
 <ul>
 <li>You can telepathically speak with any creature within 30 feet of you. A creature doesn't need to share a language with you to communicate this way, but it must understand at least one language. Creatures you speak to can reply to you telepathically, but can't initiate a telepathic conversation.</li>
 <li>As a bonus action, you can read the aura of a single creature that you can see within 30 feet of you until the end of your next turn. For the duration, the target isn't invisible or heavily obscured to you. You know its current hit points, its resistances, immunities, and vulnerabilities, and learn the creature's emotional state, including whether it is hostile or docile.</li>
-<li>As a bonus action, you can attempt to lift, push, pull, or shove one Medium or smaller creature or object (up to 200 pounds) that you can see within 30 feet of you. A creature that succeeds on a STR save against your spell save DC is unaffected. On a failed save, the creature or object is pulled, pushed, or lifted 5 feet in the direction of your choice.</li>
+<li>As a bonus action, you can attempt to lift, push, pull, or shove one Medium or smaller creature or object (up to 200 pounds) that you can see within 30 feet of you. A creature that succeeds on a STR save against your spell save DC [DC is equal to 8 + your INT modifier + your PB if you don't have a spell save DC] is unaffected. On a failed save, the creature or object is pulled, pushed, or lifted 5 feet in the direction of your choice.</li>
 </ul>
 <p>You can select this talent multiple times, choosing a different benefit each time.</p>
 <h4>Ritualist</h4>
@@ -72,7 +72,8 @@
 <p>Your study of magic has unlocked the mysteries of ritual spells. When you gain this talent, you also gain a ritual book, which contains the rituals you know. To cast a ritual spell, you must have your ritual book in hand.</p>
 <p>Choose a spell source: Arcane, Divine, Primordial, or Wyrd. You must choose your rituals from that source's spell list. Regardless of which source you choose, you use your normal spellcasting ability for these spells.</p>
 <p>When you gain your ritual book, add one ritual of each spell circle you have already unlocked via your spellcasting class. For example, a cleric who selects this talent at 4th level has spell slots for 1st and 2nd circles, so they would add one 1st-circle ritual and one 2nd-circle ritual to their book.</p>
-<p>Each time you gain access to a new circle of spell slots by gaining a level in your spellcasting class, add one new ritual spell to your book. This new ritual must be from the same circle of magic you originally chose, and it must be of a circle for which you have spell slots. For example, when a cleric reaches 5th level, they gain access to 3rd-circle spells, so the cleric would select one ritual spell of 3rd circle or lower to add to their ritual book.</p>
+<p>Each time you gain access to a new circle of spell slots by gaining a level in your spellcasting class, add one new ritual spell to your book. This new ritual must be from the same source of magic you originally chose, and it must be of a circle for which you have spell slots. For example, when a cleric reaches 5th level, they gain access to 3rd-circle spells, so the cleric would select one ritual spell of 3rd circle or lower to add to their ritual book.</p>
+<p>You can select this talent multiple times, choosing a different source of magic each time.</p>
 <h4>School Specialization</h4>
 <p>Choose one of the eight schools of magic: abjuration, conjuration, divination, enchantment, evocation, illusion, necromancy, or transmutation. You gain these benefits:</p>
 <ul>
@@ -109,7 +110,7 @@
 <p>You've trained to improve your use of armor. You gain these benefits:</p>
 <ul>
 <li>If you are proficient with light armor, you gain proficiency with medium armor. If you are proficient with medium armor, you gain proficiency with heavy armor and shields.</li>
-<li>If you are wearing armor that would normally impose disadvantage on DEX (Stealth) checks, you instead roll normally and can't have advantage or disadvantage on the check.</li>
+<li>If you are wearing armor that would normally impose disadvantage on DEX (Stealth) checks, you don't have disadvantage on the check from wearing the armor, though you may still have disadvantage from other sources.</li>
 <li>You can add up to +3 (instead of +2) to your AC based on your DEX while wearing medium armor.</li>
 </ul>
 <p>Combat Conditioning</p>
@@ -119,7 +120,7 @@
 <li>When you roll hit dice to recover hit points, treat any roll lower than your current PB as though it were equal to your PB.</li>
 </ul>
 <h4>Furious Charge</h4>
-<p>You've learned to press every advantage and hammer into enemies. Each time you move 20 feet in a straight line toward a creature and hit it with a melee weapon attack or an unarmed strike, the attack gains your choice of two of the following benefits:</p>
+<p>You've learned to press every advantage and hammer into enemies. Each time you move 20 feet in a straight line toward a creature and hit it with a melee weapon attack or an unarmed strike before the start of your next turn, the attack gains your choice of two of the following benefits:</p>
 <ul>
 <li>The attack deals additional damage of your weapon's damage type equal to your PB.</li>
 <li>If the target is one size larger than you or smaller, it is pushed 10 feet directly away from you.</li>
@@ -132,7 +133,7 @@
 <ul>
 <li>The damage of your unarmed strikes increases from 1 + STR modifier to 1d6 + STR modifier.</li>
 <li>You gain proficiency with improvised weapons. While wielding an improvised weapon with one hand, the weapon deals a minimum of 1d8 + STR modifier damage. While wielding an improvised weapon with two hands, the weapon deals a minimum of 1d10 + STR modifier damage.</li>
-<li>You have advantage on ability checks made to initiate or escape a grapple. When you start your turn grappled with or restrained by a creature, that creature takes bludgeoning damage equal to your STR modifier.</li>
+<li>You have advantage on ability checks made to initiate or escape a grapple. When you start your turn grappling or being grappled by a creature or start your turn restrained by a creature within 5 feet of you, that creature takes bludgeoning damage equal to your STR modifier.</li>
 </ul>
 <h4>Heavy Weapon Mastery</h4>
 <p><em>Prerequisite: Character 4th Level or Higher</em></p>
@@ -198,7 +199,7 @@
 <ul>
 <li>You can attempt to hide while in three-quarters cover or while lightly obscured.</li>
 <li>Creatures that rely on darkvision can't see you while you remain motionless in dim light or darkness. This effect ends if you move, take an action or bonus action, or use a reaction while in the creature's line of sight.</li>
-<li>You don't have disadvantage on attack rolls and WIS (Perception) checks against targets in dim light.</li>
+<li>You don't have disadvantage on WIS (Perception) checks that rely on sight when perceiving in dim light.</li>
 <li>If you make a ranged attack against a creature or if a creature spots you while you are hidden, you can use your reaction to make a DEX (Stealth) check at disadvantage opposed by the creature's Perception. On a success, you remain hidden and the creature is unaware of your position. Once used on a creature, the target can't be affected by this feature again for 24 hours.</li>
 </ul>
 <h4>Dungeoneer</h4>
@@ -235,7 +236,7 @@
 <h4>Quick</h4>
 <p>You are uncommonly agile. While not wearing medium or heavy armor, you gain these benefits:</p>
 <ul>
-<li>Your speed increases by 10 feet.</li>
+<li>Your walking speed increases by 10 feet.</li>
 <li>When you take the Dash action, you can move along vertical surfaces during your movement.</li>
 <li>If you fall, as a reaction you can ignore a number of feet equal to 5 times your PB, lessening any fall damage you take. If this allows you to ignore the entire distance of a fall, you can land on your feet.</li>
 <li>As a bonus action you can move up to 5 feet without provoking an opportunity attack or expending movement.</li>
@@ -244,7 +245,7 @@
 <p>You have a keen eye for detail. You gain these benefits:</p>
 <ul>
 <li>When a creature you can see speaks in a language that you know, you can discern what they are saying even if you can't hear them.</li>
-<li>You gain a +5 bonus to your passive Perception and passive Investigation.</li>
+<li>Your passive Perception and passive Investigation scores are increased as if you had advantage on them (+5).</li>
 <li>When you spend 1 minute or longer examining an object for fine or hidden details, you can ask your GM one question about it, and they must answer truthfully.</li>
 <li>If you hear a creature speak for 1 minute or longer, you can mimic its voice. A creature familiar with your target can succeed on a WIS (Insight) check opposed by your CHA (Deception) to understand the ruse.</li>
 </ul>
