--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/06 Equipment & Magic Items.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/06 Equipment & Magic Items.html
@@ -611,7 +611,7 @@ melee weapon attack.</p>
 <td>1d6/1d8 piercing</td>
 <td style="text-align: right;">3 lb.</td>
 <td>Pull, Trip</td>
-<td>Thrown (range 20/60 ft.), Versatile</td>
+<td>Reach, Versatile</td>
 </tr>
 </tbody>
 </table>
@@ -2988,9 +2988,10 @@ at one end of the barrel, allowing two Medium or smaller
 creatures to crawl inside. Ten levers are set in a row at the
 far end, each in a neutral position, able to move either
 up or down. When certain levers are used, the apparatus
-transforms to resemble a giant lobster. See the Levers of
-the Apparatus table for what each lever does.
-The <em>apparatus of the crab</em> is a Large object with AC 20 and 200 Hp.</p>
+transforms to resemble a giant lobster.
+The apparatus of the crab is a Large object with AC 20 and 200 HP, it is immune to poison damage and psychic damage, and it has a walking speed of 30 feet and swimming speed of 30 feet, while its legs and tail are extended.</p>
+<p>The apparatus floats on water. It can also go underwater to a depth of 900 feet. Below that, the apparatus takes 2d6 bludgeoning damage per minute from pressure. To be used as a vehicle, the apparatus requires one pilot. While the apparatus's hatch is closed, the compartment is airtight and watertight. The sealed compartment holds enough air for 10 hours of breathing, divided by the number of breathing creatures inside.</p>
+<p>A creature in the compartment can use an action to move as many as two of the apparatus's levers up or down. After each use, a lever goes back to its neutral position. See the Levers of the Apparatus table for what each lever does.</p>
 <h5>Table: Levers on the Apparatus</h5>
 <table>
 <thead>
@@ -3580,7 +3581,7 @@ the location, and are familiar with that place. The broom
 comes back to you when you speak another command
 word, provided that the broom is still within 1 mile of you.</p>
 <h4>Cape of the Mountebank</h4>
-<p><em>Wondrous Item, Rare; 60,000 gp</em></p>
+<p><em>Wondrous Item, Rare; 8,400 gp</em></p>
 <p>This cape smells faintly of brimstone. While wearing it,
 you can use it to cast the dimension door spell as an action.
 This property of the cape can't be used again until the
@@ -4327,8 +4328,7 @@ ignoring your orders, you and the nightmare are instantly
 transported to a random location on the Ethereal Plane,
 where the nightmare reverts to figurine form.</p>
 <p><strong><em>Onyx Dog (Rare, 8,000 gp).</em></strong> This onyx statuette of a
-dog can become a mastiff for up to 6 hours. The mastiff
-has an INT score of 8 and can speak Common. It also
+dog can become a mastiff for up to 6 hours. The mastiff has an INT of −1 and can speak Common. It also
 has darkvision to a range of 60 feet and can see invisible
 creatures and objects within that range. Once it has been
 used, it can't be used again until 7 days have passed.</p>
@@ -5357,7 +5357,7 @@ until you attack or cast a spell, or until you use a bonus
 action to become visible again.</p>
 <h4>Ring of Jumping</h4>
 <p><em>Ring, Uncommon (Requires Attunement); 1,500 gp</em></p>
-<p>While wearing this ring, you can cast the jump spell from it
+<p>While wearing this ring, you can cast the longstrider spell from it
 as a bonus action. You can target only yourself with it.
 Ring of Mind Shielding</p>
 <h4>Ring of Mind Shielding</h4>
@@ -5461,14 +5461,11 @@ chooses or determines randomly.</p>
 the attuned wearer uses them. The ring can store up to 5
 circles' worth of spells at a time. When found, it contains
 1d6 − 1 circles of stored spells chosen by the GM.
-Any creature can cast a spell of 1st through 5th circle into
-the ring by touching the ring as the spell is cast. The spell
-has no effect, other than to be stored in the ring. If the ring
+Any creature can store a spell it knows or has prepared of 1st through 5th circle in the ring by taking an action and touching the ring, expending a spell slot as if the creature had cast the spell. If the ring
 can't hold the spell, the spell is expended without effect.
 The circle of the spell slot used to cast the spell determines
 how much space it uses.</p>
-<p>While wearing this ring, you can cast any spell stored in
-it. The spell uses the slot circle, spell save DC, spell attack
+<p>While wearing this ring, you can cast any spell stored in it, using the appropriate action. If the spell requires a trigger, the conditions for that trigger must be met to cast the spell. The spell uses the slot circle, spell save DC, spell attack
 bonus, and spellcasting ability of the original caster, but is
 otherwise treated as if you cast the spell. A spell cast from
 the ring is no longer stored in it, freeing up space.</p>
@@ -5578,8 +5575,7 @@ of spheres you created.</p>
 </table>
 <h4>Ring Warmth</h4>
 <p><em>Ring, Uncommon (Requires Attunement); 2,000 gp</em></p>
-<p>While wearing this ring, you have resistance to cold
-damage. In addition, you and your equipment are
+<p>While wearing this ring, you are resistant to cold damage. In addition, you and your equipment are
 unharmed by temperatures as low as -50 degrees
 Fahrenheit.</p>
 <h4>Robe of Eyes</h4>
