--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/10 Monsters.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/10 Monsters.html
@@ -1047,6 +1047,8 @@
 <li><strong>Armor Class</strong> 7</li>
 <li><strong>Hit Points</strong> 122</li>
 <li><strong>Speed</strong> 20 ft., climb 20 ft.</li>
+<li><strong>Perception</strong> 8</li>
+<li><strong>Stealth</strong> 9</li>
 <li><strong>Resistant</strong> Ooze Resilience</li>
 <li><strong>Immune</strong> acid, lightning, slashing | grappled | Ooze Resilience</li>
 <li><strong>Senses</strong> keensense 60 ft. (can't sense beyond this radius)</li>
@@ -1650,7 +1652,7 @@
 <li><strong>Vulnerable</strong> radiant</li>
 <li><strong>Immune</strong> necrotic | frightened | Undead Resilience</li>
 <li><strong>Senses</strong> darkvision 90 ft.</li>
-<li><strong>Languages</strong> Common</li>
+<li><strong>Languages</strong> the languages it knew in life</li>
 </ul>
 <table>
 <thead>
@@ -4281,7 +4283,7 @@
 <p><em>Huge Dragon</em></p>
 <ul>
 <li><strong>Armor Class</strong> 19 (natural armor)</li>
-<li><strong>Hit Points</strong> 284</li>
+<li><strong>Hit Points</strong> 301</li>
 <li><strong>Speed</strong> 40 ft., fly 80 ft., swim 40 ft.</li>
 <li><strong>Perception</strong> 27</li>
 <li><strong>Stealth</strong> 18</li>
@@ -4588,7 +4590,7 @@
 <ul>
 <li><strong><em>Multiattack.</em></strong> The dragon uses its Frightful Presence. It then makes one Bite attack and two Claw attacks.</li>
 <li><strong><em>Bite.</em></strong> <em>Melee Weapon Attack:</em> +15 to hit, reach 15 ft., one target. <em>Hit:</em> 19 (2d10+8) piercing damage plus 10 (3d6) poison damage.</li>
-<li><strong><em>Claw.</em></strong> <em>Melee Weapon Attack:</em> +15 to hit, reach 10 ft., one target. <em>Hit:</em> 22 (4d6+8) slashing damage.</li>
+<li><strong><em>Claw.</em></strong> <em>Melee Weapon Attack:</em> +15 to hit, reach 10 ft., one target. <em>Hit:</em> 15 (2d6+8) slashing damage.</li>
 <li><strong><em>Tail.</em></strong> <em>Melee Weapon Attack:</em> +15 to hit, reach 20 ft., one target. <em>Hit:</em> 17 (2d8+8) bludgeoning damage.</li>
 <li><strong><em>Frightful Presence.</em></strong> Each creature of the dragon's choice that is within 120 feet of the dragon and aware of it must succeed on a DC 18 WIS save or be frightened for 1 minute. A creature can repeat the save at the end of each of its turns, ending the effect on itself on a success. If a creature's save is successful or the effect ends for it, the creature is immune to the dragon's Frightful Presence for the next 24 hours.</li>
 <li><strong><em>Poison Breath (Recharge 5 - 6).</em></strong> The dragon exhales poisonous gas in a 90 - foot cone. Each creature in that area must make a DC 21 CON save, taking 84 (24d6) poison damage on a failed save, or half as much damage on a successful one.</li>
@@ -5431,12 +5433,12 @@
 <p><em>Medium Humanoid</em></p>
 <ul>
 <li><strong>Armor Class</strong> 16 (scale mail, shield)</li>
-<li><strong>Hit Points</strong> 36</li>
+<li><strong>Hit Points</strong> 32</li>
 <li><strong>Speed</strong> 25 ft.</li>
 <li><strong>Perception</strong> 10</li>
 <li><strong>Stealth</strong> 12</li>
 <li><strong>Resistant</strong> poison | poisoned | Duergar Resilience</li>
-<li><strong>Senses</strong> darkvision 120 ft., passive Perception 10</li>
+<li><strong>Senses</strong> darkvision 120 ft.</li>
 <li><strong>Languages</strong> Dwarvish, Undercommon</li>
 </ul>
 <table>
@@ -6133,7 +6135,7 @@
 <tbody>
 <tr>
 <td style="text-align: right;">+3</td>
-<td style="text-align: right;">-3</td>
+<td style="text-align: right;">-4</td>
 <td style="text-align: right;">+5</td>
 <td style="text-align: right;">-5</td>
 <td style="text-align: right;">-2</td>
@@ -6142,7 +6144,7 @@
 </tbody>
 </table>
 <ul>
-<li><strong><em>Ooze Cube.</em></strong> The cube takes up its entire space. Other creatures can enter the space, but are subjected to the cube's Engulf and have disadvantage on the save. Creatures inside the cube can be seen but have total cover. A creature within 5 feet of the cube can take an action to pull a creature or object out of the cube. Doing so requires a successful DC 12 STR check, and the creature making the attempt takes 10 (3d6) acid damage.</li>
+<li><strong><em>Ooze Cube.</em></strong> The cube takes up its entire space. Other creatures can enter the space, but are subjected to the cube's Engulf and have disadvantage on the save. Creatures inside the cube can be seen but have total cover. A creature within 5 feet of the cube can take an action to pull a creature or object out of the cube. Doing so requires a successful DC 13 STR check, and the creature making the attempt takes 10 (3d6) acid damage.</li>
 </ul>
 <p>The cube can hold only one Large creature or up to four Medium or smaller creatures inside it at a time.</p>
 <ul>
@@ -7258,7 +7260,7 @@
 </ul>
 <h3>Golems</h3>
 <h4>Clay Golem (CR 9)</h4>
-<p><em>Large Construct</em></p>
+<p><em>Large Construct (Golem)</em></p>
 <ul>
 <li><strong>Armor Class</strong> 14 (natural armor)</li>
 <li><strong>Hit Points</strong> 163</li>
@@ -7311,7 +7313,7 @@
 <li><strong><em>Mold Hand.</em></strong> The clay golem molds its hand into the shape of a weapon or back into a hand. The golem's Slam attack deals bludgeoning, piercing, or slashing damage, depending on the type of weapon chosen, until the golem uses this bonus action again. For example, a hand shaped like an axe deals slashing damage.</li>
 </ul>
 <h4>Flesh Golem (CR 5)</h4>
-<p><em>Medium Construct</em></p>
+<p><em>Medium Construct (Golem)</em></p>
 <ul>
 <li><strong>Armor Class</strong> 9</li>
 <li><strong>Hit Points</strong> 129</li>
@@ -7361,7 +7363,7 @@
 <li><strong><em>Creator's Anguish (Recharge 5 - 6).</em></strong> The golem releases a wave of emotional anguish from its core. Each creature within 15 feet of the golem must make a DC 15 WIS save. On a failure, a creature takes 31 (9d6) psychic damage and is incapacitated until the end of its next turn, as its mind fills with memories of its greatest failures. On a success, a creature takes half the damage and isn't incapacitated.</li>
 </ul>
 <h4>Iron Golem (CR 16)</h4>
-<p><em>Large Construct</em></p>
+<p><em>Large Construct (Golem)</em></p>
 <ul>
 <li><strong>Armor Class</strong> 20 (natural armor, shield)</li>
 <li><strong>Hit Points</strong> 201</li>
@@ -7414,7 +7416,7 @@
 <li><strong><em>Expel Poisonous Gas (Recharge 5 - 6).</em></strong> The golem vents poisonous gas from small holes across its body. Each creature within 15 feet of the golem must make a DC 18 CON save, taking 54 (12d8) poison damage on a failed save, or half as much damage on a successful one.</li>
 </ul>
 <h4>Stone Golem (CR 10)</h4>
-<p><em>Large Construct</em></p>
+<p><em>Large Construct (Golem)</em></p>
 <ul>
 <li><strong>Armor Class</strong> 17 (natural armor)</li>
 <li><strong>Hit Points</strong> 176</li>
@@ -12207,7 +12209,7 @@
 <ul>
 <li><strong><em>Multiattack.</em></strong> The troll makes one Bite attack and two Claw attacks.</li>
 <li><strong><em>Bite.</em></strong> <em>Melee Weapon Attack:</em> +7 to hit, reach 5 ft., one target. <em>Hit:</em> 13 (2d8+4) piercing damage.</li>
-<li><strong><em>Claw.</em></strong> <em>Melee Weapon Attack:</em> +7 to hit, reach 10 ft., one target. <em>Hit:</em> 11 (2d6+4) piercing damage.</li>
+<li><strong><em>Claw.</em></strong> <em>Melee Weapon Attack:</em> +7 to hit, reach 10 ft., one target. <em>Hit:</em> 11 (2d6+4) slashing damage.</li>
 </ul>
 <h4>Bonus Actions</h4>
 <ul>
@@ -17684,7 +17686,7 @@
 <p><em>Medium Humanoid (Any Lineage)</em></p>
 <ul>
 <li><strong>Armor Class</strong> 10 (13 with mage armor)</li>
-<li><strong>Hit Points</strong> 140</li>
+<li><strong>Hit Points</strong> 70</li>
 <li><strong>Speed</strong> 30 ft.</li>
 <li><strong>Perception</strong> 11</li>
 <li><strong>Stealth</strong> 12</li>
