--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/09 Spellcasting.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/09 Spellcasting.html
@@ -1324,8 +1324,7 @@ Protection from Evil and Good
 <strong>Range:</strong> 30 feet
 <strong>Components:</strong> V, S
 <strong>Duration:</strong> Instantaneous</p>
-<p>You create 45 pounds of food and 30 gallons of water on the ground or in containers within range, enough to sustain up to twenty Large or smaller creatures for 24 hours. The food is bland but nourishing but spoils if uneaten after 24 hours.</p>
-<p>The water is clean and doesn't go bad.</p>
+<p>You create 45 pounds of food and 30 gallons of water on the ground or in containers within range, enough to sustain up to twenty Large or smaller creatures for 24 hours. The food is bland but nourishing, and it spoils if uneaten after 24 hours. The water is clean and doesn't go bad.</p>
 <h4>Create Or Destroy Water</h4>
 <p><em>1st-Circle Primordial (Transmutation)</em></p>
 <p><strong>Casting Time:</strong> 1 action
@@ -2372,7 +2371,7 @@ Protection from Evil and Good
 <p>A silvery beam of pale, dim light shines down in a 5-foot-radius, 40-foot-high cylinder centered on a point you choose within range. When a creature enters the spell's area for the first time on a turn or starts its turn there, it is engulfed in ghostly flames that cause searing pain, and it must make a CON save. It takes 2d10 radiant damage on a failed save, or half as much damage on a successful one.</p>
 <p>A creature with the Shapechanger tag makes this save with disadvantage. If it fails, it also instantly reverts to its true form and can't assume a different form until it leaves the spell's light.</p>
 <p>On each of your turns after you cast this spell, you can use an action to move the beam 60 feet in any direction.</p>
-<p><em>At Higher Circles.</em> When you cast this spell using a spell slot of 3rd circle or higher, the damage increases by 1d10 for each slot above 3rd.</p>
+<p><em>At Higher Circles.</em> When you cast this spell using a spell slot of 3rd circle or higher, the damage increases by 1d10 for each slot above 2nd.</p>
 <h4>Move Earth</h4>
 <p><em>6th-Circle Primordial (Transmutation)</em></p>
 <p><strong>Casting Time:</strong> 1 action
@@ -2907,7 +2906,7 @@ Protection from Evil and Good
 <p><strong>Casting Time:</strong> 1 bonus action
 <strong>Range:</strong> 60 feet
 <strong>Components:</strong> V, S
-<strong>Duration:</strong> Instantaneous</p>
+<strong>Duration:</strong> 1 minute</p>
 <p>You create a floating, spectral weapon within range that lasts for the duration or until you cast this spell again. The weapon can take any form you choose. When you cast the spell, you can make a melee spell attack against a creature within 5 feet of the weapon. On a hit, the target takes force damage equal to 1d8 + your spellcasting ability modifier.</p>
 <p>As a bonus action on each of your subsequent turns, you can move the weapon up to 20 feet and repeat the attack against a creature within 5 feet of it.</p>
 <p><em>At Higher Circles.</em> When you cast this spell using a spell slot of 3rd circle or higher, the damage increases by 1d8 for every two slots above 2nd.</p>
@@ -2964,7 +2963,7 @@ Protection from Evil and Good
 <strong>Duration:</strong> Concentration, up to 1 minute</p>
 <p>A beam of brilliant light flashes out from your hand in a 5-foot-wide, 60-foot-long line. Each creature in the line must make a CON save. On a failure, a creature takes 6d8 radiant damage and is blinded until your next turn. On a success, it takes half as much damage and isn't blinded by this spell. Undead have disadvantage on this save.</p>
 <p>You can create a new line of radiance as your action on each turn until the spell ends.</p>
-<p>For the duration, a mote of brilliant radiance shines in your hand. It sheds bright light in a 30-foot radius and dim light for an additional 30 feet. This light is sunlight.</p>
+<p>For the duration, a mote of brilliant radiance shines in your hand. It sheds sunlight in a 30-foot radius and dim light for an additional 30 feet.</p>
 <h4>Sunburst</h4>
 <p><em>8th-Circle Divine and Primordial (Evocation)</em></p>
 <p><strong>Casting Time:</strong> 1 action
@@ -4048,7 +4047,7 @@ location where you cast it.</p>
 <strong>Duration:</strong> Instantaneous</p>
 <p>Up to six creatures of your choice that you can see within range each regain hit points equal to 2d8 + your spellcasting ability modifier. This spell has no effect on Constructs or Undead.</p>
 <p>Once you cast this spell, you can't do so again until you complete a long rest.</p>
-<p><em>At Higher Circles.</em> As you unlock higher circles, this ritual grows in potency. Once you have access to 3rd-circle spell slots or higher, the healing increases by 1d8 for each slot above 3rd.</p>
+<p><em>At Higher Circles.</em> As you unlock higher circles, this ritual grows in potency. Once you have access to 3rd-circle spell slots or higher, the healing increases by 1d8 for each slot above 2nd.</p>
 <h3>Private Sanctum</h3>
 <p><em>4th-Circle Arcane and Divine Ritual (Abjuration)</em></p>
 <p><strong>Casting Time:</strong> 10 minutes
@@ -4265,7 +4264,7 @@ location where you cast it.</p>
 <p>Once you target a particular corpse with this spell, you can never cast this ritual on that particular corpse again.</p>
 <h3>Symbol</h3>
 <p><em>7th-Circle Arcane Ritual (Abjuration)</em></p>
-<p><strong>Casting Time:</strong> 1 action
+<p><strong>Casting Time:</strong> 1 minute
 <strong>Range:</strong> Touch
 <strong>Components:</strong> V, S, M (mercury, phosphorus, and powdered diamond and opal with a total value of at least 1,000 gp, which the spell consumes)
 <strong>Duration:</strong> Until dispelled or triggered</p>
