--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/11 Appx 01 Conditions.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/11 Appx 01 Conditions.html
@@ -68,7 +68,7 @@
 </table>
 <h2>Frightened</h2>
 <ul>
-<li>A frightened creature has disadvantage on ability checks and attack rolls while the source of its fear is within line of sight.</li>
+<li>A frightened creature has disadvantage on ability checks and attack rolls while it can sense the source of its fear.</li>
 <li>The creature can't willingly move closer to the source of its fear.</li>
 </ul>
 <h2>Grappled</h2>
@@ -79,7 +79,7 @@
 </ul>
 <h2>Incapacitated</h2>
 <ul>
-<li>An incapacitated creature can't take actions or reactions.</li>
+<li>An incapacitated creature can't take actions, bonus actions, or reactions.</li>
 </ul>
 <h2>Invisible</h2>
 <ul>
