Updated generators to consolidate js files

--- a/5e_artisanal_database/generators/armor/index.html
+++ b/5e_artisanal_database/generators/armor/index.html
@@ -42,7 +42,7 @@
     <em>Click the button above to generate content...</em>
 </div>
 
-<script src="../scrolls/spell_index.js"></script>
+<script src="../../css_js/spell_index.js"></script>
 <script src="../../css_js/generator.js"></script>
 <script>
 // Armor generator data
