--- a/5e_artisanal_database/generators/relics/index.html
+++ b/5e_artisanal_database/generators/relics/index.html
@@ -43,7 +43,7 @@
     <em>Click the button above to generate content...</em>
 </div>
 
-<script src="../scrolls/spell_index.js"></script>
+<script src="../../css_js/spell_index.js"></script>
 <script>
 // Relic data arrays - extracted from the generator_text.js template format
 const conditions = [
