--- a/5e_artisanal_database/generators/scrolls/index.html
+++ b/5e_artisanal_database/generators/scrolls/index.html
@@ -41,7 +41,7 @@
     <em>Click the button above to generate 10 spell scrolls...</em>
 </div>
 
-<script src="spell_index.js"></script>
+<script src="../../css_js/spell_index.js"></script>
 <script src="scroll_generator.js"></script>
 <script>
 // Auto-generate scrolls on page load
